// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSideNavItem can be disabled 1`] = `
<div
  class="ouiSideNavItem ouiSideNavItem--root"
>
  <button
    class="ouiSideNavItemButton"
    disabled=""
    type="button"
  >
    <span
      class="ouiSideNavItemButton__content"
    >
      <span
        class="ouiSideNavItemButton__label ouiSideNavItemButton__label--truncated"
      >
        Children
      </span>
    </span>
  </button>
</div>
`;

exports[`OuiSideNavItem can be emphasized 1`] = `
<div
  class="ouiSideNavItem ouiSideNavItem--root ouiSideNavItem--emphasized"
>
  <div
    class="ouiSideNavItemButton"
  >
    <span
      class="ouiSideNavItemButton__content"
    >
      <span
        class="ouiSideNavItemButton__label ouiSideNavItemButton__label--truncated"
      >
        Children
      </span>
    </span>
  </div>
</div>
`;

exports[`OuiSideNavItem can have truncation turned off 1`] = `
<div
  class="ouiSideNavItem ouiSideNavItem--root"
>
  <div
    class="ouiSideNavItemButton"
  >
    <span
      class="ouiSideNavItemButton__content"
    >
      <span
        class="ouiSideNavItemButton__label"
      >
        Children
      </span>
    </span>
  </div>
</div>
`;

exports[`OuiSideNavItem href is rendered 1`] = `
<div
  class="ouiSideNavItem ouiSideNavItem--root"
>
  <a
    class="ouiSideNavItemButton ouiSideNavItemButton--isClickable"
    href="#"
    rel="noreferrer"
  >
    <span
      class="ouiSideNavItemButton__content"
    >
      <span
        class="ouiSideNavItemButton__label ouiSideNavItemButton__label--truncated"
      >
        <button />
      </span>
    </span>
  </a>
</div>
`;

exports[`OuiSideNavItem href is rendered with rel 1`] = `
<div
  class="ouiSideNavItem ouiSideNavItem--root"
>
  <a
    class="ouiSideNavItemButton ouiSideNavItemButton--isClickable"
    href="#"
    rel="noopener noreferrer"
  >
    <span
      class="ouiSideNavItemButton__content"
    >
      <span
        class="ouiSideNavItemButton__label ouiSideNavItemButton__label--truncated"
      >
        <button />
      </span>
    </span>
  </a>
</div>
`;

exports[`OuiSideNavItem is rendered 1`] = `
<div
  class="ouiSideNavItem ouiSideNavItem--root"
>
  <div
    class="ouiSideNavItemButton"
  >
    <span
      class="ouiSideNavItemButton__content"
    >
      <span
        class="ouiSideNavItemButton__label ouiSideNavItemButton__label--truncated"
      >
        <button
          aria-label="aria-label"
          class="testClass1 testClass2"
          data-test-subj="test subject string"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`OuiSideNavItem isSelected defaults to false 1`] = `
<div
  class="ouiSideNavItem ouiSideNavItem--root"
>
  <div
    class="ouiSideNavItemButton"
  >
    <span
      class="ouiSideNavItemButton__content"
    >
      <span
        class="ouiSideNavItemButton__label ouiSideNavItemButton__label--truncated"
      >
        <button />
      </span>
    </span>
  </div>
</div>
`;

exports[`OuiSideNavItem isSelected is rendered when specified as true 1`] = `
<div
  class="ouiSideNavItem ouiSideNavItem--root"
>
  <div
    class="ouiSideNavItemButton ouiSideNavItemButton-isSelected"
  >
    <span
      class="ouiSideNavItemButton__content"
    >
      <span
        class="ouiSideNavItemButton__label ouiSideNavItemButton__label--truncated"
      >
        <button />
      </span>
    </span>
  </div>
</div>
`;

exports[`OuiSideNavItem preserves child's classes 1`] = `
<div
  class="ouiSideNavItem ouiSideNavItem--root"
>
  <div
    class="ouiSideNavItemButton"
  >
    <span
      class="ouiSideNavItemButton__content"
    >
      <span
        class="ouiSideNavItemButton__label ouiSideNavItemButton__label--truncated"
      >
        <button
          class="test"
        />
      </span>
    </span>
  </div>
</div>
`;
